Changed project to be similar to Goodreads website.

--- a/db/models.yml
+++ b/db/models.yml
@@ -1,3 +1,31 @@
+Book
+  title: text
+  author: text
+  genre: text
+  summary: text
+  photo_url: text
+  user_id: integer
+  created_at: datetime
+  updated_at: datetime
+
+Review
+  book_id: integer
+  rating: integer
+  content: text_field_tag
+  created_at: datetime
+
+User
+  name: text
+  email: text
+  password_digest: text
+  created_at: text
+  updated_at: text
+
+Favorite
+  user_id: integer
+  book_id: integer
+  created_at: datetime
+
 # This file allows you to specify your domain model
 # in .yml format.  Use `rails db:migrate` to apply your
 # specification to your development database.
